# WindTurbineSpacialDataVisualizer

./: .gitignore  CMakeLists.txt  README.md  custom.geo.json  declarations.d.ts  package-lock.json  package.json
ApplicationMain/: CMakeLists.txt  CSV_File.cpp  DataColumn.cpp  DataRow.cpp  main.cpp
include/: CSV_File.h  DataColumn.h  DataRow.h  tree_utils.h  trees.h
include/k-d_tree/: k-d_tree.h
include/range_tree/: range_tree.h
k-d_tree/: k-d_tree.h
public/: index.html
public/data/: custom.geo.json
src/: App.css  App.js  Map.css  Map.js
tests/k-d_tree_tests/: CMakeLists.txt  k-d_tree_tests.cpp
tests/range_tree_tests/: CMakeLists.txt  range_tree_tests.cpp
tests/speed_tests/: CMakeLists.txt  speed_test.cpp
